@@ -5,7 +5,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import org.junit.jupiter.api.Test;
@@ -19,7 +19,9 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
+import com.pedro.petshop.dtos.PetDTO;
 import com.pedro.petshop.entities.Pet;
+import com.pedro.petshop.mappers.PetMapper;
 import com.pedro.petshop.services.PetService;
 
 @SpringBootTest
@@ -28,17 +30,21 @@ class PetControllerTest {
     @Autowired
     private PetController petController;
 
+    @Autowired
+    private PetMapper petMapper;
+
     @MockitoBean
     private PetService petService;
 
     @Test
     void testCreatePet() {
-        Pet mockPet = createPet(null, "Buddy", LocalDate.of(2020, 5, 15));
+        PetDTO mockPetDTO = createPet(null, "Buddy", LocalDate.of(2020, 5, 15));
+        Pet mockPet = petMapper.toEntity(mockPetDTO);
         when(petService.create(any(Pet.class))).thenReturn(mockPet);
 
-        Pet petToCreate = createPet(null, "Buddy", LocalDate.of(2020, 5, 15));
+        PetDTO petToCreate = createPet(null, "Buddy", LocalDate.of(2020, 5, 15));
 
-        Pet result = petController.createPet(petToCreate);
+        PetDTO result = petController.createPet(petToCreate);
 
         assertEquals("Buddy", result.getName());
         assertEquals(LocalDate.of(2020, 5, 15), result.getBirthDate());
@@ -46,13 +52,15 @@ class PetControllerTest {
 
     @Test
     void testGetPetById_PetExists() {
-        Pet mockPet = createPet(1L, "Buddy", LocalDate.of(2020, 5, 15));
+        PetDTO mockPetDTO = createPet(null, "Buddy", LocalDate.of(2020, 5, 15));
+        Pet mockPet = petMapper.toEntity(mockPetDTO);
         when(petService.findById(1L)).thenReturn(Optional.of(mockPet));
 
-        ResponseEntity<Pet> response = petController.getPetById(1L);
+        ResponseEntity<PetDTO> response = petController.getPetById(1L);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        Pet body = response.getBody();
+        PetDTO body = Optional.ofNullable(response.getBody())
+                .orElseThrow(() -> new AssertionError("Response body should not be null"));
         assertEquals("Buddy", body.getName());
         assertEquals(LocalDate.of(2020, 5, 15), body.getBirthDate());
     }
@@ -61,21 +69,24 @@ class PetControllerTest {
     void testGetPetById_PetNotFound() {
         when(petService.findById(1L)).thenReturn(Optional.empty());
 
-        ResponseEntity<Pet> response = petController.getPetById(1L);
+        ResponseEntity<PetDTO> response = petController.getPetById(1L);
 
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
     @Test
     void testGetAllPets() {
-        Pet mockPet1 = createPet(1L, "Buddy", LocalDate.of(2020, 5, 15));
-        Pet mockPet2 = createPet(2L, "Bella", LocalDate.of(2019, 8, 12));
-        Page<Pet> mockPage = new PageImpl<>(Arrays.asList(mockPet1, mockPet2), PageRequest.of(0, 10), 2);
+        PetDTO petDTO1 = createPet(1L, "Buddy", LocalDate.of(2020, 5, 15));
+        PetDTO petDTO2 = createPet(2L, "Bella", LocalDate.of(2019, 8, 12));
+        Pet pet1 = petMapper.toEntity(petDTO1);
+        Pet pet2 = petMapper.toEntity(petDTO2);
+
+        Page<Pet> mockPage = new PageImpl<>(List.of(pet1, pet2), PageRequest.of(0, 10), 2);
 
         when(petService.findAll(any(Pageable.class))).thenReturn(mockPage);
 
         Pageable pageable = PageRequest.of(0, 10);
-        Page<Pet> result = petController.getAllPets(pageable);
+        Page<PetDTO> result = petController.getAllPets(pageable);
 
         assertEquals(2, result.getContent().size());
         assertEquals("Buddy", result.getContent().get(0).getName());
@@ -84,12 +95,13 @@ class PetControllerTest {
 
     @Test
     void testUpdatePet() {
-        Pet mockPet = createPet(1L, "Buddy", LocalDate.of(2020, 5, 15));
+        PetDTO mockPetDTO = createPet(1L, "Buddy", LocalDate.of(2020, 5, 15));
+        Pet mockPet = petMapper.toEntity(mockPetDTO);
         when(petService.update(any(Long.class), any(Pet.class))).thenReturn(mockPet);
 
-        Pet petToUpdate = createPet(1L, "Buddy", LocalDate.of(2020, 5, 15));
+        PetDTO petToUpdate = createPet(1L, "Buddy", LocalDate.of(2020, 5, 15));
 
-        Pet result = petController.updatePet(1L, petToUpdate);
+        PetDTO result = petController.updatePet(1L, petToUpdate);
 
         assertEquals("Buddy", result.getName());
         assertEquals(LocalDate.of(2020, 5, 15), result.getBirthDate());
@@ -104,8 +116,8 @@ class PetControllerTest {
         assertEquals(true, result);
     }
 
-    private Pet createPet(Long id, String name, LocalDate birthDate) {
-        Pet pet = new Pet();
+    private PetDTO createPet(Long id, String name, LocalDate birthDate) {
+        PetDTO pet = new PetDTO();
         pet.setId(id);
         pet.setName(name);
         pet.setBirthDate(birthDate);
