@@ -4,7 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import org.junit.jupiter.api.Test;
@@ -18,8 +18,10 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
+import com.pedro.petshop.dtos.UserDTO;
 import com.pedro.petshop.entities.User;
 import com.pedro.petshop.enums.Role;
+import com.pedro.petshop.mappers.UserMapper;
 import com.pedro.petshop.services.UserService;
 
 @SpringBootTest
@@ -28,17 +30,21 @@ class UserControllerTest {
     @Autowired
     private UserController userController;
 
+    @Autowired
+    private UserMapper userMapper;
+
     @MockitoBean
     private UserService userService;
 
     @Test
     void testCreateUser() {
-        User mockUser = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        UserDTO mockUserDTO = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        User mockUser = userMapper.toEntity(mockUserDTO);
         when(userService.create(any(User.class))).thenReturn(mockUser);
 
-        User userToCreate = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        UserDTO userToCreate = createUser("12345678901", "Pedro", Role.ADMIN, "password");
 
-        User result = userController.createUser(userToCreate);
+        UserDTO result = userController.createUser(userToCreate);
 
         assertEquals("Pedro", result.getName());
         assertEquals(Role.ADMIN, result.getRole());
@@ -47,13 +53,15 @@ class UserControllerTest {
 
     @Test
     void testGetUserById_UserExists() {
-        User mockUser = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        UserDTO mockUserDTO = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        User mockUser = userMapper.toEntity(mockUserDTO);
         when(userService.findById("12345678901")).thenReturn(Optional.of(mockUser));
 
-        ResponseEntity<User> response = userController.getUserById("12345678901");
+        ResponseEntity<UserDTO> response = userController.getUserById("12345678901");
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        User body = response.getBody();
+        UserDTO body = Optional.ofNullable(response.getBody())
+                .orElseThrow(() -> new AssertionError("Response body should not be null"));
         assertEquals("Pedro", body.getName());
         assertEquals(Role.ADMIN, body.getRole());
     }
@@ -62,21 +70,24 @@ class UserControllerTest {
     void testGetUserById_UserNotFound() {
         when(userService.findById("12345678901")).thenReturn(Optional.empty());
 
-        ResponseEntity<User> response = userController.getUserById("12345678901");
+        ResponseEntity<UserDTO> response = userController.getUserById("12345678901");
 
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
     }
 
     @Test
     void testGetAllUsers() {
-        User mockUser1 = createUser("12345678901", "Pedro", Role.ADMIN, "password");
-        User mockUser2 = createUser("98765432100", "Maria", Role.CLIENT, "password");
-        Page<User> mockPage = new PageImpl<>(Arrays.asList(mockUser1, mockUser2), PageRequest.of(0, 10), 2);
+        UserDTO userDTO1 = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        UserDTO userDTO2 = createUser("98765432100", "Maria", Role.CLIENT, "password");
+        User user1 = userMapper.toEntity(userDTO1);
+        User user2 = userMapper.toEntity(userDTO2);
+
+        Page<User> mockPage = new PageImpl<>(List.of(user1, user2), PageRequest.of(0, 10), 2);
 
         when(userService.findAll(any(Pageable.class))).thenReturn(mockPage);
 
         Pageable pageable = PageRequest.of(0, 10);
-        Page<User> result = userController.getAllUsers(pageable);
+        Page<UserDTO> result = userController.getAllUsers(pageable);
 
         assertEquals(2, result.getContent().size());
         assertEquals("Pedro", result.getContent().get(0).getName());
@@ -85,12 +96,13 @@ class UserControllerTest {
 
     @Test
     void testUpdateUser() {
-        User mockUser = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        UserDTO mockUserDTO = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        User mockUser = userMapper.toEntity(mockUserDTO);
         when(userService.update(any(String.class), any(User.class))).thenReturn(mockUser);
 
-        User userToUpdate = createUser("12345678901", "Pedro", Role.ADMIN, "password");
+        UserDTO userToUpdate = createUser("12345678901", "Pedro", Role.ADMIN, "password");
 
-        User result = userController.updateUser("12345678901", userToUpdate);
+        UserDTO result = userController.updateUser("12345678901", userToUpdate);
 
         assertEquals("Pedro", result.getName());
         assertEquals(Role.ADMIN, result.getRole());
@@ -105,8 +117,8 @@ class UserControllerTest {
         assertEquals(true, result);
     }
 
-    private User createUser(String cpf, String name, Role role, String password) {
-        User user = new User();
+    private UserDTO createUser(String cpf, String name, Role role, String password) {
+        UserDTO user = new UserDTO();
         user.setCpf(cpf);
         user.setName(name);
         user.setRole(role);
